fix(concept): banner tittle alignment

--- a/apps/concept-catalog/pages/[catalogId]/search-page.module.css
+++ b/apps/concept-catalog/pages/[catalogId]/search-page.module.css
@@ -89,6 +89,7 @@
   .searchRowContainer {
     background-color: var(--ba);
     flex-direction: column;
+    align-items: center;
     gap: 1rem;
   }
 
